# soalpich

./: README.md  db.json  manage.py  pyproject.toml
letstalk/: admin.py  apps.py  consumers.py  models.py  routing.py  tests.py  urls.py  views.py
letstalk/templates/: chat_room.html
soalpich/: .env.example  asgi.py  settings.py  urls.py  wsgi.py
static/styles/: debug.css  global.scss  main.css  main.css.map
thegame/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
thegame/templates/: 404.html  base.html  games_room.html  index.html  play.html  profile.html  public_profile.html  register.html
