[tool.poetry]
name = "soalpich"
version = "1.0.0"
description = "A website to ask you questions..."
authors = ["Artin Mohammadi <sheikhartin@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/sheikhartin/soalpich"
keywords = ["game", "chat", "django", "web-development"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Internet :: WWW/HTTP",
]

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.4"
psycopg2-binary = "^2.9.9"
django-environ = "^0.11.2"
whitenoise = "^6.6.0"
pillow = "^10.3.0"
channels = {extras = ["daphne"], version = "^4.1.0"}
channels-redis = "^4.2.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.3"

[tool.ruff]
exclude = [
    ".eggs",
    ".git",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".tox",
    ".venv",
    ".vscode",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 88
indent-width = 4
target-version = "py310"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
